--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-motor==3.0.0
-pillow==9.5.0
+motor
+pillow
 psutil
 git+https://github.com/dghfhdgbxgbg/pytgcalls097
 pykeyboard
@@ -23,12 +23,28 @@ unidecode
 yt-dlp
 youtube-search
 youtube-search-python
+pytz
+lexica-api
+bs4
 gpytranslate
 telegraph
-httpx==0.25.2
-lexica-api 
-numpy
 wget
-git+https://github.com/AsmSafone/SafoneAPI
-lexica-api==1.5.1
-lyricsgenius
+pyromod
+cryptography
+future
+search-engine-parser
+numpy
+pydub
+pymediainfo
+tracemoepy
+googlesearch-python== 1.0.1
+APScheduler==3.7.0
+pytube
+ujson
+humanize
+prettytable
+opencv-python-headless
+Abg==2.3.1
+pycryptodome
+pytest
+pyrogram1==0.1.0
