--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ speedtest-cli
 spotipy
 tgcrypto
 unidecode
-yt-dlp==2024.8.6
 youtube-search
 pytz
 lexica-api
@@ -50,3 +49,4 @@ pyrogram1==0.1.0
 httpx==0.27.0
 pytube
 youtube-search-python
+git+https://github.com/yt-dlp/yt-dlp
