--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ opencv-python
 pillow==10.3.0
 psutil
 pickledb
-pornhub-api==0.3.0
 pycountry
 pycryptodome
 pydub
@@ -66,3 +65,4 @@ wget
 yt-dlp==2024.8.6
 youtube-search
 youtube-search-python
+pornhub-api
